Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46300

Qt's application ignore some input method behavior

XMLWordPrintable

    • macOS
    • 5647af5a485067d20bf46fc716a3f2e9603c3d50 (qt/tqtc-qtbase/6.2)

      Qt application (e.g. Qt creator) could not handle key event properly with AquaSKK (https://github.com/codefirst/aquaskk), Japanese Input Method on MacOS X.

      Steps to reproduce

      1. Launch Qt creator and open some window to input text(e.g. new project)
      2. Press Ctrl-J to enable Japanese input mode.
      3. Press "a", and "あ" is inserted. (this is right)
      4. Press "l" to disable Japanese input mode.
      5. "l" is inserted. (this is wrong)

      Cause(maybe)

      AquaSKK uses some key to handle input method state, not insert text.

      But only when some text inserted, m_sendKeyEvent becomes false. I think change doCommandBySelector to assign false to m_sendKeyEvent.

      https://github.com/qtproject/qtbase/blob/a6f7dc521b0491a4e8a163941fedecbfdce26b43/src/plugins/platforms/cocoa/qnsview.mm#L1454

        For Gerrit Dashboard: QTBUG-46300
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            mzp MIZUNo Hiroki
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes